--- a/frontend/src/assets/styles/partials/pages/_signUp.scss
+++ b/frontend/src/assets/styles/partials/pages/_signUp.scss
@@ -5,22 +5,21 @@
 
     & > .title {
         font-size: 45px;
-        font-weight: normal;
     }
 
-    // .stepContent {
-    //     display: none;
-    //     &.active {
-    //         display: unset;
-    //     }
-    // }
+    .stepContent {
+        display: none;
+        &.active {
+            display: unset;
+        }
+    }
 
     form {
         @include flexbox(center, center);
         flex-direction: column;
         gap: 18px;
         width: 25vw;
-        
+
         & > div {
             @include flexbox(center, unset);
             flex-direction: column;
@@ -43,7 +42,7 @@
 
         & > .date > div {
             width: 50%;
-        } 
+        }
 
         & > .terms {
             flex-direction: row;
@@ -66,38 +65,24 @@
             width: 100%;
             background-color: transparent;
             padding: 8px;
-            border: 1px solid black;
-            color: black;
+            border: 1px solid white;
+            color: white;
         }
 
         option {
-            background-color: white;
+            background-color: grey;
             padding: 5px;
         }
 
         button {
-            background-color: transparent;
-            border: 1px solid black;
+            background-color: black;
             padding: 10px;
-            transition: 300ms;
-
-            &:hover {
-                background-color: #37AF91;
-                color: #F0F2F4;
-            }
         }
 
         .required:after {
             content: '*';
             color: red;
             margin-left: 5px;
-        }
-
-        textarea {
-            border: 1px solid black;
-            resize:none;
-            padding: 8px;
-            font-size: 14px;
         }
     }
 
@@ -114,9 +99,9 @@
             flex-direction: column;
             align-items: center;
             gap: 6px;
-            
+
             & > div {
-                outline: 1px solid black;                
+                border: 1.5px solid white;
                 color: white;
                 background-color: grey;
                 padding: 5px 10px;
@@ -131,7 +116,7 @@
             }
 
             &.active > div {
-                background-color:  #37AF91;;
+                background-color: #1274AC;
             }
             &.active > p {
                 opacity: 1;
@@ -144,28 +129,23 @@
             top: 25%;
             left: 10%;
             width: 80%;
-            height: 1.5px;
+            height: 1px;
         }
 
         &.step1::before {
-            background-color: grey;
+            background-color: white;
         }
         &.step2::before {
-            background-image: linear-gradient(to right, #37AF91 50%, grey 50%); 
+            background-image: linear-gradient(to right, #1274AC 50%, white 50%);
         }
         &.step3::before {
-            background-color:  #37AF91;;
+            background-color: #1274AC;
         }
     }
 
     input[type="file"] {
         display: none;
     }
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-        display: none;
-    }
-    
     .custom-file-upload {
         border: 1px solid #ccc;
         display: inline-block;
@@ -174,7 +154,7 @@
 
     .videoContainer {
         width: 100%;
-        height: 550px;
+        height: 500px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
@@ -191,7 +171,6 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin-bottom: 0px;
 
                 &::before {
                     content: '+';
@@ -199,39 +178,32 @@
                     bottom: -5px;
                     right: -5px;
                     border-radius: 50%;
-                    background-color:  #37AF91;;
+                    background-color: red;
                     width: 25px;
                     height: 25px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     font-size: 22px;
-                    color: white;
                 }
 
-                video {
+                img {
                     border-radius: 12px;
                     // width: 100%;
                     // height: calc(500px/3);
+
                     display: none;
-                    width: 100%;
-                    max-height: calc((550px - 24px)/3);
+                }
+
+                label {
+                    // margin-bottom: 0px!important;
                 }
             }
 
-            &.active {
-                label::before {
-                    content: 'x';
-                }
-                img {
-                    display: unset;
-                }
+            &.active img {
+                display: unset;
             }
         }
-    }
-    .error {
-        color: red;
-        font-size: 15px;
     }
 
 }
