--- a/frontend/src/assets/styles/partials/components/_footer.scss
+++ b/frontend/src/assets/styles/partials/components/_footer.scss
@@ -1,18 +1,17 @@
 #footer {
     @include dimension(100%, auto);
-    background-color: white;
+    background-color: var(--darkgrey-color);
     padding: 50px 250px;
-    position: relative;
     // position: absolute;
     // left: 0;
     // bottom: 0;
-    
+
     & > div {
         @include flexbox(space-between, center);
         margin-left: 5vw;
 
     }
-    
+
     &.loggedIn > div {
         margin-left: 18vw;
     }
