--- a/frontend/src/assets/styles/partials/components/_navbar_popup.scss
+++ b/frontend/src/assets/styles/partials/components/_navbar_popup.scss
@@ -1,12 +1,10 @@
 #navbar_popup {
     width: 100vw;
     height: 100vh;
-    background-color: rgba(61, 168, 129, 0.239);
-    backdrop-filter: blur(4px);
+    background-color: rgba(17, 16, 19, 0.93);
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
 
     & > button {
         background-color: transparent;
@@ -16,10 +14,9 @@
         // margin-top: 3vh;
         // margin-left: 1.15vw;
         transition: 300ms;
-        border: 1px solid black;
 
         &:hover {
-            transform: scale(1.04);
+            background-color: var(--grey-color);
         }
 
         & > img {
@@ -36,15 +33,15 @@
         height: 78vh;
     }
 
-    
+
     ul {
         counter-reset: section; /* Increment the value of section counter by 1 */
     }
-    
+
     li {
         font-size: 10vh;
         margin: 5vh;
-        color: rgb(39, 39, 39);
+        font-weight: bold;
 
         &:before {
             counter-increment: section; /* Increment the value of section counter by 1 */
@@ -53,10 +50,9 @@
             vertical-align: top;
             line-height: 20px;
             color: grey;
-            font-weight: bold;
             // transform: translateY(10px);
         }
-    
+
     }
     a {
         transition: 300ms;
@@ -68,7 +64,7 @@
 
     &.loggedIn {
         & > button {
-            margin: 4.7vh 14.8vw 0px 14.9vw;        
+            margin: 5.5vh 14.8vw 0px 14.8vw;
         }
     }
 }
