--- a/frontend/src/assets/styles/partials/base/_reset.scss
+++ b/frontend/src/assets/styles/partials/base/_reset.scss
@@ -3,25 +3,25 @@
 }
 
 ::-webkit-scrollbar-track {
-    background-color: white;
+    background-color: var(--track-color);
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(128, 128, 128, 0.357);
+    background-color: var(--thumb-color);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(128, 128, 128, 0.557);
+    background-color: var(--thumb-hover-color);
 }
 
 ::selection {
-    background-color:#37af9176;
-    // color: #fff;
+    background-color: var(--main-color-2);
+    color: #fff;
 }
 
 ::-moz-selection {
-    // background-color: rgba(128, 128, 128, 0.357);
-    // color: #fff;
+    background-color: var(--main-color-2);
+    color: #fff;
 }
 
 *,
@@ -44,8 +44,8 @@ html {
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #F0F2F4;
-    color: black;
+    background-color: var(--grey-color);
+    color: var(--text-color);
 }
 
 section {
@@ -67,7 +67,7 @@ textarea {
 
 input[type="checkbox"],
 input[type="range"] {
-    accent-color: #199890;
+    accent-color: var(--main-color-2);
 }
 
 button {
