--- a/frontend/src/assets/styles/partials/pages/_explore.scss
+++ b/frontend/src/assets/styles/partials/pages/_explore.scss
@@ -1,265 +1,75 @@
-#explore {
-    border-radius: 8px;
-    background-color: white;
-    width: 19.5vw;
-    height: 71.5vh;
-    color: black;
-    overflow-y: hidden;
-    position: relative;
-    min-width: 375px;
+#sidebar {
+    @include dimension(5vw, 100vh);
+    background-color: var(--darkgrey-color);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    padding: 3vh 0.3vw;
+    @include flexbox(space-between, center);
+    flex-direction: column;
+    transition: 500ms;
 
-    &::-webkit-scrollbar {
-        display: none;
-    }
-    
-    .videoContainer {
-        display: none;
-
-        &.active {
-            display: inline-block;
-        }
-    }
-
-    .videoContainer > img {
-        border-radius: 8px 8px 0px 0px;
-        object-fit: cover;
-        cursor: pointer;
+    .top_part {
+        @include flexbox(center, center);
+        flex-direction: column;
+        gap: 15px;
         width: 100%;
-        height: 85%
-    }
-    
-    .info {
-        position: relative;
-    }
-
-    .info > div {
-        padding: 15px;   
-        border-bottom: 1px solid black;
-
-        &:last-child {
-            border-bottom: unset;
-        }
-        .nameAndAgeContainer {
-            font-size: 30px;
-            font-weight: bold;
-            margin-bottom: 15px;
+        .buttons {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            & > img {
-                border: 1px solid black;
+            gap: 10px;
+            & > button {
+                background-color: var(--grey-color);
                 border-radius: 50%;
-                width: 30px;
-                height: 30px;
-                padding: 3px;
-                transition: 200ms;
-                cursor: pointer;
-                z-index: 1;
-
-                &:hover {
-                    opacity: 0.8;
+                padding: 10px;
+                & > img {
+                    width: 30px;
                 }
             }
         }
-    }
-
-
-    .basic > div {
-        // opacity: 0.8;
-        display: flex;
-        margin-bottom: 5px;
-        &:last-child {
-            margin-bottom: 0px;
-        }
-        & > img {
-            width: 16px;
-            height: 16px;
-            margin-right: 4px;
-        }
-    }
-
-    .passions > p {
-        font-size: 19px;
-        font-weight: bold;
-        margin-bottom: 12px;
-        
-    }
-
-    .passions > div {
-        @include flexbox(start, center);
-        flex-wrap: wrap;
-        gap: 10px;
-
-        & > div {
-            padding: 8px 20px;
-            border: 1px solid black;
-            border-radius: 20px;
-        }
-    }
-
-    .videoContainer {
-        position: relative;
-        height: 100%;
-
-        &:hover .arrows {
-            opacity: 1;
-        }
-
-    }
-
-    .shortInfo {
-        position: absolute;
-        bottom: 100px;
-        left: 0px;
-        color: white;
-        font-size: 40px;
-        display: flex;
-        align-items: flex-end;
-        width: 100%;
-        height: 28%;
-        // height: 187px;
-        //aq
-        padding: 0px 18px;
-        background-image: linear-gradient(to top, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 100%);
-    
-
-        & > div {
-            display: flex;
-            justify-content: space-between;
+        & > a {
+            transition: 500ms;
             width: 100%;
-            align-items: center;
-
-            & > img {
-                width: 24px;
-                height: 24px;
-                cursor: pointer;
-                transition: 200ms;
-
-                &:hover {
-                    opacity: 0.8;
-                }
-            }
         }
-
     }
 
-    .buttons {
-        position: sticky;
-        bottom: 0px;
-        left: 0px;
-        color: white;
-        font-size: 40px;
-        background-color: black;
-        width: 100%;
-        // height: 15.1%;
-        //aq
-        height: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 50px;
-
-        & > img {
-            width: 60px;
-            height: 60px;
-            border: 1px solid green;
-            border-radius: 50%;
-            padding: 10px;
-            cursor: pointer;
-            transition: 200ms;
-
-            &:nth-child(1) {
-                border-color: #C71F1F;
-            }
-            &:nth-child(2) {
-                border-color: #199890;
-            }
+    .bottom_part {
+        button {
+            background-color: rgba(150, 144, 162, 0.25);;
+            padding: 8px 10px;
+            text-transform: uppercase;
+            font-size: 15px;
+            transform: rotate(270deg) translateX(3vh);
+            border-radius: 3px;
+            color: grey;
+            transition: background-color 300ms, color 300ms, transform 500ms;
+            margin: 0px;
 
             &:hover {
-                transform: scale(1.04);            
+                background-color: #dc2828;
+                color: white;
             }
         }
     }
 
-    .bullets {
-        position: absolute;
-        top: 0px;
-        left: 0;
-        width: 100%;
-        height: 12px;
-        padding: 4px 8px;
-        @include flexbox(center, center);
-        gap: 8px;
+    &.loggedIn {
+        width: 18vw;
 
-        & > div {
-            background-color: #505965;
-            border-radius: 3px;
-            width: 100%;
-            height: 100%;
-            cursor: pointer;
+        .top_part {
+            justify-content: space-between;
+            flex-direction: row-reverse;
+            padding-right: 5px;
 
-            &.active {
-                background-color: white;
+            & > a {
+                width: 40%;
+            }
+        }
+
+        .bottom_part {
+            button {
+                transform: rotate(360deg) translateX(0px);
+                margin: 0px 20px;
             }
         }
     }
-    .arrows {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 85%;
-        visibility: hidden;
-        opacity: 0;
-        transition: 200ms;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        
-        
-        & > div {
-            width: 100%;
-            height: 100%;
-            cursor: pointer;
-            padding: 0px 10px;
-            opacity: 0;
-            visibility: hidden;
-
-            &.active {
-                visibility: visible;
-                opacity: 1;
-            }
-
-            & > img {
-                width: 25px;
-            }
-        }
-
-        & > .arrowLeft {
-            @include flexbox(start, center)
-        }
-
-        & > .arrowRight {
-            @include flexbox(end, center)
-        }
-
-    }
-
-    &.isInfoVisible {
-        overflow-y: scroll;
-
-        .videoContainer {
-            height: 80%;
-            & > img {
-                height: 100%; 
-            }   
-        }
-        .buttons {
-            background-image: linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 70%, rgba(255, 255, 255, 0) 100%);
-            background-color: transparent;
-            & > img {
-                background-color: white;
-            }
-        }
-    }
+    // border-right: 1px solid var(--purple-color);
 }
