--- a/frontend/src/assets/styles/partials/pages/_signUp.scss
+++ b/frontend/src/assets/styles/partials/pages/_signUp.scss
@@ -146,6 +146,11 @@
     input[type="file"] {
         display: none;
     }
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        display: none;
+    }
+
     .custom-file-upload {
         border: 1px solid #ccc;
         display: inline-block;
@@ -154,7 +159,7 @@
 
     .videoContainer {
         width: 100%;
-        height: 500px;
+        height: 550px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
@@ -171,6 +176,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-bottom: 0px;
 
                 &::before {
                     content: '+';
@@ -178,7 +184,7 @@
                     bottom: -5px;
                     right: -5px;
                     border-radius: 50%;
-                    background-color: red;
+                    background-color: #1274AC;
                     width: 25px;
                     height: 25px;
                     display: flex;
@@ -187,21 +193,23 @@
                     font-size: 22px;
                 }
 
-                img {
+                video {
                     border-radius: 12px;
                     // width: 100%;
                     // height: calc(500px/3);
-
                     display: none;
-                }
-
-                label {
-                    // margin-bottom: 0px!important;
+                    width: 100%;
+                    max-height: calc((550px - 24px)/3);
                 }
             }
 
-            &.active img {
-                display: unset;
+            &.active {
+                label::before {
+                    content: 'x';
+                }
+                img {
+                    display: unset;
+                }
             }
         }
     }
