--- a/frontend/src/assets/styles/index.scss
+++ b/frontend/src/assets/styles/index.scss
@@ -25,6 +25,7 @@
 @import "./partials/pages/notFound";
 @import "./partials/pages/explore";
 @import "./partials/pages/profile";
+@import "./partials/pages/chat";
 
 // @import "./partials/pages/products";
 // @import "./partials/pages/product_details";
