--- a/frontend/src/assets/styles/partials/components/_sidebar.scss
+++ b/frontend/src/assets/styles/partials/components/_sidebar.scss
@@ -4,10 +4,11 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    padding: 3vh 0.3vw;
-    @include flexbox(space-between, center);
-    flex-direction: column;
+    padding: 3vh 0vw;
     transition: 500ms;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     .top_part {
         @include flexbox(center, center);
@@ -33,6 +34,9 @@
     }
 
     .bottom_part {
+        width: 100%;
+        display: flex;
+        justify-content: center;
         button {
             background-color: rgba(150, 144, 162, 0.25);;
             padding: 8px 10px;
@@ -51,13 +55,67 @@
         }
     }
 
+    .center_part {
+        width: 100%;
+        display: flex;
+        align-items: start;
+        margin: 20px 0px;
+
+        & > button {
+            background-color: rgba(150, 144, 162, 0.25);;
+            padding: 8px 0px;
+            width: 212px;
+            text-transform: uppercase;
+            font-size: 15px;
+            border-radius: 3px;
+            color: grey;
+            transition: background-color 300ms, color 300ms, transform 500ms;
+            margin: 0px auto;
+
+            &:hover {
+                background-color: #dc2828;
+                color: white;
+            }
+        }
+
+        .messagesContainer {
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            align-items: start;
+            gap: 0px;
+            width: 100%;
+            border-top: 1px solid white;
+            border-bottom: 1px solid white;
+            height: 100%;
+
+            & > div {
+                padding: 10px;
+                width: 100%;
+                cursor: pointer;
+                & > p {
+                    &:first-child {
+                        font-weight: bold;
+                        font-size: 16px;
+                    }
+                    font-size: 14px;
+                    margin: 10px;
+                }
+            }
+        }
+    }
+
     &.loggedIn {
         width: 18vw;
+        display: grid;
+        grid-template-rows: 10% 85% 5%;
+        grid-template-columns: 1fr;
+        justify-content: center;
 
         .top_part {
             justify-content: space-between;
             flex-direction: row-reverse;
-            padding-right: 5px;
+            padding-right: 7px;
 
             & > a {
                 width: 40%;
