--- a/frontend/src/assets/styles/partials/pages/_profile.scss
+++ b/frontend/src/assets/styles/partials/pages/_profile.scss
@@ -109,10 +109,11 @@
     .videoContainer {
         width: 100%;
         height: 550px;
-        display: grid;
+        display: grid !important;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        gap: 12px;
+        gap: 12px!important;
+
         & > div {
             width: 100%;
             height: 100%;
