--- a/frontend/src/assets/styles/index.scss
+++ b/frontend/src/assets/styles/index.scss
@@ -10,6 +10,8 @@
 @import "./partials/components/sidebar";
 
 @import "./partials/components/navbar_popup";
+@import "./partials/components/newmatches_popup";
+
 // @import "./partials/components/backtop";
 // @import "./partials/components/form";
 // @import "./partials/components/searchbar";
