--- a/frontend/src/assets/styles/partials/components/_sidebar.scss
+++ b/frontend/src/assets/styles/partials/components/_sidebar.scss
@@ -1,15 +1,15 @@
 #sidebar {
     @include dimension(5vw, 100vh);
-    background-color: var(--darkgrey-color);
+    background-color: white;
     position: fixed;
     top: 0px;
     left: 0px;
     padding: 3vh 0vw;
-    transition: 500ms;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    z-index: 1;
+    
     .top_part {
         @include flexbox(center, center);
         flex-direction: column;
@@ -19,15 +19,25 @@
             display: flex;
             gap: 10px;
             & > button {
-                background-color: var(--grey-color);
+                // background-color: #199890be;
+                border: 1px solid black;
                 border-radius: 50%;
                 padding: 10px;
+                transition: 300ms;
+
+                &:hover {
+                    transform: scale(1.04);
+                }
+
                 & > img {
                     width: 30px;
                 }
             }
         }
         & > a {
+            & > img {
+                filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+            }
             transition: 500ms;
             width: 100%;
         }
@@ -38,19 +48,20 @@
         display: flex;
         justify-content: center;
         button {
-            background-color: rgba(150, 144, 162, 0.25);;
+            background-color: transparent;
             padding: 8px 10px;
             text-transform: uppercase;
             font-size: 15px;
             transform: rotate(270deg) translateX(3vh);
             border-radius: 3px;
-            color: grey;
+            color: black;
             transition: background-color 300ms, color 300ms, transform 500ms;
             margin: 0px;
+            border: 1px solid black;
 
             &:hover {
-                background-color: #dc2828;
-                color: white;
+                background-color: #37AF91;
+                color: #F0F2F4;
             }
         }
     }
@@ -60,24 +71,25 @@
         display: flex;
         align-items: start;
         margin: 20px 0px;
-
+        
         & > button {
-            background-color: rgba(150, 144, 162, 0.25);;
+            background-color: transparent;
             padding: 8px 0px;
+            border: 1px solid black;
             width: 212px;
             text-transform: uppercase;
             font-size: 15px;
             border-radius: 3px;
-            color: grey;
+            color: black;
             transition: background-color 300ms, color 300ms, transform 500ms;
             margin: 0px auto;
-
+            
             &:hover {
-                background-color: #dc2828;
-                color: white;
+                background-color: #37AF91;
+                color: #F0F2F4;
             }
         }
-
+        
         .messagesContainer {
             display: flex;
             flex-direction: column;
@@ -93,6 +105,17 @@
                 padding: 10px;
                 width: 100%;
                 cursor: pointer;
+                transition: 300ms;
+
+                &.active {
+                    cursor: unset;
+                    background-color:rgba(0, 0, 0, 0.133);
+                }
+
+                &:hover {
+                    background-color:rgba(0, 0, 0, 0.133);
+                }
+
                 & > p {
                     &:first-child {
                         font-weight: bold;
@@ -103,20 +126,69 @@
                 }
             }
         }
+
+        .filters {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+            gap: 20px;
+            padding: 0px 20px;
+            margin-top: 45%;
+
+            & > p {
+                font-size: 22px;
+            }
+
+            & > div {
+                width: 100%;
+            }
+
+            input, select {
+                width: 100%;
+                background-color: transparent;
+                padding: 8px;
+                border: 1px solid black;
+                color: black;
+            }
+    
+            option {
+                background-color: white;
+                padding: 5px;
+            }
+    
+            button {
+                background-color: transparent;
+                border: 1px solid black;
+                padding: 10px;
+                transition: 300ms;
+                width: 100%;
+                text-transform: uppercase;
+                font-size: 14px;
+
+                &:hover {
+                    background-color: #37AF91;
+                    color: #F0F2F4;
+                }
+            }
+        }
     }
 
     &.loggedIn {
         width: 18vw;
+        min-width: 18vw;
         display: grid;
         grid-template-rows: 10% 85% 5%;
         grid-template-columns: 1fr;
         justify-content: center;
+        min-width: 325px;
 
         .top_part {
             justify-content: space-between;
             flex-direction: row-reverse;
             padding-right: 7px;
-
+            
             & > a {
                 width: 40%;
             }
