--- a/frontend/src/assets/styles/partials/pages/_explore.scss
+++ b/frontend/src/assets/styles/partials/pages/_explore.scss
@@ -6,34 +6,25 @@
     color: black;
     overflow-y: hidden;
     position: relative;
-    min-width: 375px;
 
     &::-webkit-scrollbar {
         display: none;
     }
-    
-    .videoContainer {
-        display: none;
 
-        &.active {
-            display: inline-block;
-        }
-    }
-
-    .videoContainer > img {
+    .videoContainer > video {
         border-radius: 8px 8px 0px 0px;
         object-fit: cover;
         cursor: pointer;
         width: 100%;
-        height: 85%
+        height: 85%;
     }
-    
+
     .info {
         position: relative;
     }
 
     .info > div {
-        padding: 15px;   
+        padding: 15px;
         border-bottom: 1px solid black;
 
         &:last-child {
@@ -83,7 +74,7 @@
         font-size: 19px;
         font-weight: bold;
         margin-bottom: 12px;
-        
+
     }
 
     .passions > div {
@@ -119,10 +110,9 @@
         width: 100%;
         height: 28%;
         // height: 187px;
-        //aq
         padding: 0px 18px;
         background-image: linear-gradient(to top, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 100%);
-    
+
 
         & > div {
             display: flex;
@@ -153,7 +143,6 @@
         background-color: black;
         width: 100%;
         // height: 15.1%;
-        //aq
         height: 100px;
         display: flex;
         justify-content: center;
@@ -177,7 +166,7 @@
             }
 
             &:hover {
-                transform: scale(1.04);            
+                transform: scale(1.04);
             }
         }
     }
@@ -215,8 +204,8 @@
         transition: 200ms;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        
-        
+
+
         & > div {
             width: 100%;
             height: 100%;
@@ -250,9 +239,9 @@
 
         .videoContainer {
             height: 80%;
-            & > img {
-                height: 100%; 
-            }   
+            & > video {
+                height: 100%;
+            }
         }
         .buttons {
             background-image: linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.5) 70%, rgba(255, 255, 255, 0) 100%);
