--- a/frontend/src/assets/styles/partials/pages/_chat.scss
+++ b/frontend/src/assets/styles/partials/pages/_chat.scss
@@ -1,6 +1,6 @@
 #chat {
     display: grid;
-    grid-template-rows: 1fr; 
+    grid-template-rows: 1fr;
     grid-template-columns: 70% 30%;
     width: 100%;
     height: 100%;
@@ -11,10 +11,10 @@
 
     .chat {
         display: grid;
-        grid-template-rows: 10% 82% 8%; 
+        grid-template-rows: 10% 82% 8%;
         grid-template-columns: 1fr;
         min-height: 100vh;
-        
+
         & > .upperPart {
             display: flex;
             align-items: center;
@@ -22,6 +22,7 @@
             padding: 0px 40px;
 
             & > p {
+                font-weight: bold;
                 font-size: 18px;
             }
         }
@@ -33,7 +34,7 @@
             &::-webkit-scrollbar {
                 display: none;
             }
-            
+
             & > .messageContainer {
                 width: 100%;
                 padding: 15px 0px;
@@ -47,7 +48,7 @@
                 &:hover img, &:hover time {
                     opacity: 1;
                 }
-                
+
                 .message {
                     max-width: 40%;
                     line-height: 20px;
@@ -94,7 +95,7 @@
                     }
 
                 }
-                
+
                 &.isLast::after {
                     content: 'Sent';
                     position: absolute;
@@ -110,7 +111,7 @@
                 color: grey;
                 text-align: center;
             }
-            
+
         }
         & > .bottomPart {
             display: flex;
@@ -122,7 +123,7 @@
                 width: 100%;
                 padding: 0px 25px;
                 display: grid;
-                grid-template-rows: 1fr; 
+                grid-template-rows: 1fr;
                 grid-template-columns: 80% 20%;
                 gap: 4px;
                 textarea {
@@ -146,11 +147,11 @@
                     color: grey;
                     margin: 0px auto;
                     transition: 300ms;
-                    
+
                     &.active {
                         background-color: #37AF91;
                         color: #F0F2F4;
-                        
+
                         &:hover {
                             opacity: 0.8;
                         }
@@ -173,28 +174,28 @@
             height: 75%;
         }
 
-        .videoContainer > video {
+        .videoContainer > video, .videoContainer > img {
             object-fit: cover;
             cursor: pointer;
             height: 100%;
             width: 100%;
         }
-        
+
         .info > div {
-            padding: 15px;   
+            padding: 15px;
             border-bottom: 1px solid black;
-    
+
             &:last-child {
                 border-bottom: unset;
             }
         }
-    
+
         .nameAndAge {
             font-size: 30px;
             font-weight: bold;
             margin-bottom: 15px;
         }
-    
+
         .basic > div {
             // opacity: 0.8;
             display: flex;
@@ -208,29 +209,38 @@
                 margin-right: 4px;
             }
         }
-    
+
+        .more {
+            padding: 0px!important;
+
+            & > .passions {
+                padding: 15px;
+                border-bottom: 1px solid black;
+            }
+        }
+
         .passions > p {
             font-size: 19px;
             font-weight: bold;
             margin-bottom: 12px;
-            
+
         }
-    
+
         .passions > div {
             @include flexbox(start, center);
             flex-wrap: wrap;
             gap: 10px;
-    
+
             & > div {
                 padding: 8px 20px;
                 border: 1px solid black;
                 border-radius: 20px;
             }
         }
-    
+
         .videoContainer {
             position: relative;
-    
+
             &:hover .arrows {
                 opacity: 1;
             }
@@ -244,14 +254,14 @@
             padding: 4px 8px;
             @include flexbox(center, center);
             gap: 8px;
-    
+
             & > div {
                 background-color: #505965;
                 border-radius: 3px;
                 width: 100%;
                 height: 100%;
                 cursor: pointer;
-    
+
                 &.active {
                     background-color: white;
                 }
@@ -268,8 +278,8 @@
             transition: 200ms;
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            
-            
+
+
             & > div {
                 width: 100%;
                 height: 100%;
@@ -277,25 +287,25 @@
                 padding: 0px 10px;
                 opacity: 0;
                 visibility: hidden;
-    
+
                 &.active {
                     visibility: visible;
                     opacity: 1;
                 }
-    
+
                 & > img {
                     width: 25px;
                 }
             }
-    
+
             & > .arrowLeft {
                 @include flexbox(start, center)
             }
-    
+
             & > .arrowRight {
                 @include flexbox(end, center)
             }
-    
+
         }
     }
 }
