--- a/frontend/src/assets/styles/partials/pages/_explore.scss
+++ b/frontend/src/assets/styles/partials/pages/_explore.scss
@@ -6,17 +6,27 @@
     color: black;
     overflow-y: hidden;
     position: relative;
+    min-width: 375px;
 
     &::-webkit-scrollbar {
         display: none;
     }
 
-    .videoContainer > video {
+    .videoContainer {
+        display: none;
+        width: 100%;
+
+        &.active {
+            display: inline-block;
+        }
+    }
+
+    .videoContainer > img, .videoContainer > video  {
         border-radius: 8px 8px 0px 0px;
         object-fit: cover;
         cursor: pointer;
         width: 100%;
-        height: 85%;
+        height: 85%
     }
 
     .info {
@@ -70,11 +80,19 @@
         }
     }
 
+    .more {
+        padding: 0px!important;
+
+        & > .passions {
+            padding: 15px;
+            border-bottom: 1px solid black;
+        }
+    }
+
     .passions > p {
         font-size: 19px;
         font-weight: bold;
         margin-bottom: 12px;
-
     }
 
     .passions > div {
@@ -110,6 +128,7 @@
         width: 100%;
         height: 28%;
         // height: 187px;
+        //aq
         padding: 0px 18px;
         background-image: linear-gradient(to top, rgb(0, 0, 0) 0%, rgba(255, 255, 255, 0) 100%);
 
@@ -143,6 +162,7 @@
         background-color: black;
         width: 100%;
         // height: 15.1%;
+        //aq
         height: 100px;
         display: flex;
         justify-content: center;
@@ -234,12 +254,22 @@
 
     }
 
+    .loading {
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+    }
+
     &.isInfoVisible {
         overflow-y: scroll;
 
         .videoContainer {
             height: 80%;
-            & > video {
+            width: 100%;
+            & > img, & > video {
                 height: 100%;
             }
         }
