--- a/frontend/src/assets/styles/partials/pages/_signUp.scss
+++ b/frontend/src/assets/styles/partials/pages/_signUp.scss
@@ -20,7 +20,7 @@
         flex-direction: column;
         gap: 18px;
         width: 25vw;
-        
+
         & > div {
             @include flexbox(center, unset);
             flex-direction: column;
@@ -43,7 +43,7 @@
 
         & > .date > div {
             width: 50%;
-        } 
+        }
 
         & > .terms {
             flex-direction: row;
@@ -114,9 +114,9 @@
             flex-direction: column;
             align-items: center;
             gap: 6px;
-            
+
             & > div {
-                outline: 1px solid black;                
+                outline: 1px solid black;
                 color: white;
                 background-color: grey;
                 padding: 5px 10px;
@@ -151,7 +151,7 @@
             background-color: grey;
         }
         &.step2::before {
-            background-image: linear-gradient(to right, #37AF91 50%, grey 50%); 
+            background-image: linear-gradient(to right, #37AF91 50%, grey 50%);
         }
         &.step3::before {
             background-color:  #37AF91;;
@@ -165,7 +165,7 @@
     input::-webkit-inner-spin-button {
         display: none;
     }
-    
+
     .custom-file-upload {
         border: 1px solid #ccc;
         display: inline-block;
@@ -182,6 +182,7 @@
         & > div {
             width: 100%;
             height: 100%;
+            position: relative;
 
             & > label {
                 width: 100%;
@@ -192,39 +193,71 @@
                 justify-content: center;
                 align-items: center;
                 margin-bottom: 0px;
+                object-fit: cover;
 
-                &::before {
-                    content: '+';
-                    position: absolute;
-                    bottom: -5px;
-                    right: -5px;
-                    border-radius: 50%;
-                    background-color:  #37AF91;;
-                    width: 25px;
-                    height: 25px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    font-size: 22px;
-                    color: white;
-                }
-
-                video {
+                video, img {
                     border-radius: 12px;
                     // width: 100%;
                     // height: calc(500px/3);
                     display: none;
                     width: 100%;
                     max-height: calc((550px - 24px)/3);
+                    object-fit: cover;
+                    width: 100%;
+                    height: 100%;
                 }
             }
 
-            &.active {
-                label::before {
-                    content: 'x';
+            & > img {
+                position: absolute;
+                background-color: #37AF91;
+                border-radius: 50%;
+                width: 25px;
+                height: 25px;
+                font-size: 22px;
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                bottom: -5px;
+                right: -5px;
+                padding: 3px;
+
+                &.deleteFile {
+                    transform: rotate(45deg);
+                    background-color: red;
+                    display: none;
                 }
-                img {
-                    display: unset;
+            }
+
+            &.uploaded {
+                & > img {
+
+                    &.deleteFile {
+                        display: flex;
+                        cursor: pointer;
+                    }
+                }
+                .custom-file-upload {
+                    cursor: unset;
+                    pointer-events: none;
+                }
+            }
+
+            &.isVideo {
+                label > img {
+                    display: none!important;
+                }
+                label > video {
+                    display: unset!important;
+                }
+            }
+            &.isImage {
+                label > video {
+                    display: none!important;
+                }
+                label > img {
+                    display: unset!important;
                 }
             }
         }
